app/assets/stylesheets/pages.css.scss
// http://stackoverflow.com/questions/19089384/twitter-bootstrap-3-two-columns-full-height
html, body, form {
  height: 100%;
}

.transcription-form {
  padding-bottom: 0px;
  position: fixed;
  top: 70px;
}

input[type="submit"] {
  text-shadow: none;
  margin-right: 15px;
  margin-top: 10px;
}

.row.editor {
  height: 85%;
  margin-left:0;
  margin-right:0;
}

trix-toolbar {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 5px;

  &.floating {
    right: 5px;
    & .button_groups {
      float: right;
    }
  }

  & .button_groups {
    button {
      z-index: 10; /* To make sure the buttons appears cleanly on top of text when floating */
    }
    button.bold {
      display: none;
    }
    button.strike {
      display: none;
    }
    button.link {
      display: none;
    }
    .block_tools {
      display: none;
    }

  }
}

trix-editor {
  position: absolute;
  top: 40px;
  right: 0;
  bottom: 0;
  left: 0;

  font-size: 18px; /* More comfortable for Arabic */
  overflow: scroll;
}

@media (max-height: 820px) {
  .row.editor {
    height: 75%;
  }
}

@media (max-width: 500px) {
  .bottom-bar input {
    width: 40%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
}

.panel {
  margin-bottom: 0px;
  margin-right: 45px;
}

.scanned-image-container {
  height: 100%;
}

.scanned-image {
  background-size: 97% auto;
  background-repeat: no-repeat;
  width: 100%;
  height: 100%;
}

.col-scan {
  padding-right: 0;
}

.col-input {
  padding-left: 0;
}


// http://www.minimit.com/articles/solutions-tutorials/bootstrap-3-responsive-columns-of-same-height
/* columns of same height styles */

.row-full-height {
  height: 100%;
}
.col-full-height {
  height: 100%;
  vertical-align: middle;
}
.row-same-height {
  display: table;
  width: 100%;
  /* fix overflow */
  table-layout: fixed;
}
.col-xs-height {
  display: table-cell;
  float: none !important;
}

@media (min-width: 768px) {
  .col-sm-height {
    display: table-cell;
    float: none !important;
  }
}
@media (min-width: 992px) {
  .col-md-height {
    display: table-cell;
    float: none !important;
  }
}
@media (min-width: 1200px) {
  .col-lg-height {
    display: table-cell;
    float: none !important;
  }
}

/* vertical alignment styles */

.col-top {
  vertical-align: top;
}
.col-middle {
  vertical-align: middle;
}
.col-bottom {
  vertical-align: bottom;
}

/* Hide all tooltips until Bootstrap bug is resolved */
/* https://github.com/twbs/bootstrap/issues/16028 */
.tooltip {
  display: none !important;
}

